rnsc/test_data/integration/error/parser/outside_class_directive/type_hints.rns
@string "Hello, World!"
@int 42 ; This one is not error, because after finding the first error, the parser will stop and try to find .class
